Fix spacing

--- a/app/assets/stylesheets/_reviewer.scss
+++ b/app/assets/stylesheets/_reviewer.scss
@@ -309,7 +309,7 @@ svg[aria-hidden=true],
 }
 
 .cf-pdf-buttons-center {
-  $spacing: 10px;
+  $spacing: 25px;
 
   .page-progress-indicator {
     margin-right: $spacing;
